chore: remove task group from task arguments